fix: includes #purple-bg to lighter text group & brightens off-white for better legibilty

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,8 +74,8 @@ header a img {
     color:#000;
  }
 
-#red-bg, #black-bg, #brown-bg {
-    color:#ccc;
+#red-bg, #black-bg, #brown-bg, #purple-bg {
+    color:#fafafa;
  }
 
 
